instagram/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mautrix-instagram-bridge
  labels:
    app.kubernetes.io/name: mautrix-instagram
    app.kubernetes.io/instance: matrix-instagram
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mautrix-instagram
      app.kubernetes.io/instance: matrix-instagram
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mautrix-instagram
        app.kubernetes.io/instance: matrix-instagram
    spec:
      serviceAccountName: mautrix-instagram-bridge
      securityContext:
        {}
      containers:
        - name: mautrix-instagram
          securityContext:
            runAsGroup: 1000
            runAsNonRoot: true
            runAsUser: 1000
          image: "dock.mau.dev/mautrix/instagram:v0.1.1"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 29318
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /_matrix/mau/live
              port: http
            failureThreshold: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /_matrix/mau/live
              port: http
            failureThreshold: 5
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /_matrix/mau/live
              port: http
            initialDelaySeconds: 5
            failureThreshold: 30
            periodSeconds: 10
          volumeMounts:
            - name: data
              mountPath: /data
            - name: config
              mountPath: /config
          resources:
            {}
      volumes:
        - name: config
          secret:
            secretName: mautrix-instagram-bridge
        - name: data
          emptyDir: {}
