instagram/service.patch.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mautrix-bridge
  labels:
    app.kubernetes.io/name: mautrix-instagram
spec:
  selector:
    app.kubernetes.io/name: mautrix-instagram
